[gd_scene load_steps=9 format=3 uid="uid://bcko51m0txpbs"]

[ext_resource type="Script" uid="uid://cg4wfcmidjxac" path="res://scripts/enemy.gd" id="1_8lywj"]
[ext_resource type="Texture2D" uid="uid://btj3mnkrhhvm8" path="res://graphics/enemies/enemytusks/enemy_huskhill_idle_sprite_01_v1.png" id="2_1vfe0"]
[ext_resource type="Texture2D" uid="uid://dc8pffvudc7uj" path="res://graphics/enemies/enemytusks/enemy_huskhill_idle_sprite_02_v1.png" id="3_4k5qo"]
[ext_resource type="Texture2D" uid="uid://cf5qjotvbs3rc" path="res://graphics/enemies/enemytusks/enemy_huskhill_walk_sprite_01_v1.png" id="4_7p2tp"]
[ext_resource type="Texture2D" uid="uid://bhfenohbsheix" path="res://graphics/enemies/enemytusks/enemy_huskhill_walk_sprite_02_v1.png" id="5_wyawc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ge483"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1vfe0")
}, {
"duration": 1.0,
"texture": ExtResource("3_4k5qo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7p2tp")
}, {
"duration": 1.0,
"texture": ExtResource("5_wyawc")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ffj3o"]
radius = 17.0
height = 198.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1vfe0"]
radius = 14.102564
height = 38.88889

[node name="Tusked_Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_8lywj")
speed = 50.0
health = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(0, -81)
rotation = 3.1415927
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_ge483")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-15, -81)
shape = SubResource("CapsuleShape2D_ffj3o")

[node name="WallRayRight" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="WallRayLeft" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, 35)
collision_mask = 9

[node name="LedgeRayRight" type="RayCast2D" parent="."]
position = Vector2(20, 0)
collision_mask = 9

[node name="LedgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
collision_mask = 9

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(1.8, 1.56)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18.88889, -8.97436)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_1vfe0")
